# histogram

./: CMakeLists.txt
include/: Histogram.h  HistogramBase.h  Log.h  RandomEintegerGenerator.h
src/: Histogram.cpp  RandomEintegerGenerator.cpp  main.cpp
